--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -23,14 +23,12 @@ body {
     font-family: 'Times New Roman', serif;
 } */
 
-/* Full-screen background GIF */
 .full-screen-gif {
     width: 100%;
     height: 100vh;
     object-fit: cover;
 }
 
-/* Start Mission button */
 #start-mission-button {
     position: absolute;
     bottom: 5%;
@@ -46,14 +44,12 @@ body {
     font-weight: bold;
 }
 
-/* Polluted planet background styling */
 .background-image {
     width: 100%;
     height: 100vh;
     object-fit: cover;
 }
 
-/* Dialogue bubble styling */
 #dialogue-box {
     position: absolute;
     top: 0%;
@@ -68,16 +64,14 @@ body {
     background-repeat: no-repeat;
     color: rgba(0, 0, 0, 0.686);
     text-align: center;
-    font-size: 2.5em; /* Increased font size */
+    font-size: 2.5em;
     font-weight: bold;
 }
 
-/* Dialogue text styling */
 #dialogue-text {
-    padding-top: 20px; /* Adjust to ensure it appears inside the bubble */
+    padding-top: 20px;
 }
 
-/* Next button styling */
 #next-button {
     position: absolute;
     bottom: 50%;
@@ -91,7 +85,6 @@ body {
     cursor: pointer;
 }
 
-/* Skip button styling */
 #skip-button {
     position: absolute;
     bottom: 20%;
@@ -130,6 +123,7 @@ header, .left-sidebar, .right-sidebar, footer {
 .main-content {
     background-color: #FFFFFF;
     padding: 20px;
+    padding-top: 15em;
     border: 2px solid #2e8b57;
     border-radius: 8px;
     position: relative;
@@ -180,6 +174,28 @@ header, .left-sidebar, .right-sidebar, footer {
     margin-top: 20px;
 }
 
+#launch-game-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px 30px;
+    font-size: 1.2em;
+    background-color: #3a7f40;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s;
+    z-index: 2;
+}
+
+#launch-game-button:hover {
+    background-color: #4caf50;
+}
+
 .loading-image {
     display: block;
     margin: 20px auto;
@@ -189,9 +205,9 @@ footer {
     background: none;
     color: rgb(17, 75, 0);
     text-align: center;
-    font-size: 0.9em;
+    font-size: 1.5em;
     padding: 0;
-    margin-top: 20px;
+    margin-top: 80px;
     border: none;
     box-shadow: none;
 }
